src/css/shared/_header.sass
.#{$ns}-header
  position: relative

  @media only screen and (max-width: #{$viewport-large - 1})
    margin-top: 70px

  &.show
    height: 156px
    margin-bottom: 70px
    @media only screen and (max-width: #{$viewport-large - 1})
      margin-bottom: 0px

    .#{$ns}-header--background
      height: 156px

      @media only screen and (max-width: 550px)
        object-fit: none

    .#{$ns}-header--intro
      background: rgba(0,0,0,0.8)
      height: 156px

      svg
        margin-top: 45px

  &.fixed
    padding-bottom: 70px

.#{$ns}-header--background
  object-fit: cover
  height: 100%
  width: 100%
  object-position: left center
  position: absolute
  top: 0
  left: 0

  // @media only screen and (max-width: #{$viewport-large - 1})
  //   height: 650px


.#{$ns}-header--intro
  padding-bottom: 70px
  width: 100%

  @media only screen and (max-width: #{$viewport-medium - 1})
    padding-bottom: 1px

  svg
    margin: 80px 0 0 0
    fill: #ffffff
    width: 264px
    height: 42px

    @media only screen and (max-width: #{$viewport-medium - 1})
      margin-top: 26px

  span
    color: $color-green
    font-family: $font-serif
    +font-size(14)
    display: block
    width: 259px
    margin-top: 0px
    text-align: center
    position: relative
    margin-left: 2px

    &::before, &::after
      content: ''
      position: absolute
      width: 20px
      border-top: 1px solid $color-green
      height: 1px
      top: 11px
      opacity: .5

    &::before
      left: 0px

    &::after
      right: 0px

  p
    color: rgba($color-white, 0.9)
    max-width: 50%
    +font-size(14)
    line-height: 2
    letter-spacing: 0.5px
    margin-bottom: 20px

    @media only screen and (max-width: #{$viewport-large - 1})
      max-width: 75%

    @media only screen and (max-width: #{$viewport-medium - 1})
      max-width: 100%

    &:first-of-type
      margin-top: 0px
      padding-top: 50px

      @media only screen and (max-width: #{$viewport-medium - 1})
        padding-top: 20px

.#{$ns}-header--nav
  height: 70px
  background-color: $color-green
  // padding-top: 11px
  overflow: hidden
  position: relative
  z-index: 99999

  @media only screen and (max-width: #{$viewport-large - 1})
    position: fixed
    top: 0
    left: 0
    width: 100%

  &.mobilescroll
    @media only screen and (max-width: #{$viewport-large - 1})
      .#{$ns}-header--mobilelogo
        opacity: 1

  .#{$ns}-header--nav---logo
    position: absolute
    width: 136px
    height: 22px
    opacity: 0
    padding: 0
    transition: opacity 1s $curve
    transition-delay: 0s
    margin-top: 23px

  .#{$ns}-header--mobilelogo
    opacity: 0
    margin: 24px 0 0 61px
    display: none
    transition: opacity .3s ease

    @media only screen and (min-width: 521px) and (max-width: #{$viewport-large - 1})
      display: inline-block

  .#{$ns}-header--mobilemenu
    margin: 13px 0 0 0px
    display: none
    width: 40px
    position: absolute
    top: 11px
    left: $spacing

    @media only screen and (max-width: #{$viewport-large - 1})
      display: inline-block


  &.fixed
    position: fixed
    top: 0
    left: 0
    width: 100%

    li:nth-child(2)
      margin-left: 155px

    .#{$ns}-header--nav---logo
      opacity: 1
      transition-delay: .5s

  svg
    fill: $color-white
    height: 22px
    width: 136px

  &::after
    @extend %clear

  ul
    list-style: none
    padding: 0
    margin: 0
    float: left
    // padding-top: 13px

    @media only screen and (max-width: #{$viewport-large - 1})
      display: none

  li
    color: $color-green-dark
    cursor: pointer
    display: inline-block
    font-family: $font-nav
    font-weight: 600
    height: 35px
    letter-spacing: 1px
    opacity: 0.52
    padding: 7px 12px 0px
    position: relative
    text-transform: uppercase
    transition: all .2s ease-in-out, margin .7s ease-in-out
    margin-top: 17px

    &:hover
      background: $color-white
      border-radius: 3px
      color: darken($color-green, 5%)
      opacity: 1

    // &::before
    //   border-top: 3px solid $color-green-dark
    //   content: ''
    //   position: absolute
    //   width: 100%
    //   height: 5px
    //   left: 0px
    //   top: 25px
    //   opacity: 0
    //   transition: all .3s $curve
    //
    // &::after
    //   border-top: 3px solid $color-green-dark
    //   content: ''
    //   position: absolute
    //   width: 100%
    //   height: 5px
    //   left: 0px
    //   bottom: 25px
    //   opacity: 0
    //   transition: all .3s $curve
    //
    // &:hover
    //   &::before
    //     top: 10px
    //   &::after
    //     bottom: 10px
    //   &::before, &::after
    //     opacity: 1


    @media only screen and (max-width: 1156px)
      padding: 7px 6px 0px

    &:nth-child(2)
      margin-left: -11px

    &.active
      &::after
        position: absolute
        background: $color-green-dark
        height: 4px
        width: calc(100% - 12px)
        bottom: -10px
        left: 0
        content: ''

.#{$ns}-header--search
  height: 47px
  background: #BEC518
  border: 1px solid #AEB512
  border-radius: 3px
  max-width: 265px
  width: 100%
  float: right
  padding: 0 18px
  transition: all .3s ease-in-out
  font-family: $font-serif
  margin-top: 12px

  @media only screen and (min-width: #{$viewport-large - 1}) and (max-width: 1156px)
    max-width: 210px

  @media only screen and (max-width: #{$viewport-medium - 1})
    max-width: 210px

  &:focus
    outline: 0
    border-color: #959c0c

.#{$ns}-header--search::placeholder
  color: #92970D

